test/functions/deitz/test_function_noparens_error.good
test_function_noparens_error.chpl:5: error: unresolved access of 'void' by '()'
