test/functions/deitz/test_function_noparens_error.chpl
proc foo {
  writeln("hi");
}

foo();
